--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -41,5 +41,14 @@
             android:text="Pas de voisins"
             android:phoneNumber="true"/>
 
+    <view
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            class="fr.ifsttar.plaiimob.BikeView"
+            android:id="@+id/bikeView"
+            android:layout_below="@+id/neighbour"
+            android:layout_marginTop="11dp"
+            android:layout_alignLeft="@+id/neighbour"/>
+
 
 </RelativeLayout>
