--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -8,47 +8,50 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/labelMyPos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/myPos" />
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
-    <TextView
-    android:id="@+id/dataMyPos"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/noVehicle"
-    android:layout_below="@+id/labelMyPos"
-    android:layout_alignLeft="@+id/labelMyPos"/>
+        <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/bikeView"
+                android:layout_centerHorizontal="true">
 
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Send position"
-            android:id="@+id/buttonSend"
-            android:layout_below="@+id/dataMyPos"
-            android:layout_alignLeft="@+id/dataMyPos"
-            android:layout_marginTop="20dp"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/imageAlert"
+                    android:src="@drawable/bike"
+                    android:layout_alignTop="@+id/bikeView"
+                    android:layout_alignLeft="@+id/bikeView"
+                    android:visibility="invisible"/>
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/neighbour"
-            android:layout_below="@+id/buttonSend"
-            android:layout_alignLeft="@+id/buttonSend"
-            android:layout_marginTop="14dp"
-            android:text="Pas de voisins"
-            android:phoneNumber="true"/>
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Large Text"
+                    android:id="@+id/textAlert"
+                    android:layout_alignTop="@+id/bikeView"
+                    android:layout_alignRight="@+id/bikeView"
+                    android:layout_toRightOf="@+id/imageAlert"
+                    android:singleLine="false"
+                    android:textAlignment="center"
+                    android:textSize="32dp"
+                    android:visibility="invisible"/>
+        </LinearLayout>
 
-    <view
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            class="fr.ifsttar.plaiimob.BikeView"
-            android:id="@+id/bikeView"
-            android:layout_below="@+id/neighbour"
-            android:layout_marginTop="11dp"
-            android:layout_alignLeft="@+id/neighbour"/>
+        <view
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                class="fr.ifsttar.plaiimob.BikeView"
+                android:id="@+id/bikeView"
+                android:layout_centerHorizontal="true"
+                />
+
+    </LinearLayout>
 
 
 </RelativeLayout>
