--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+        >
 
     <LinearLayout
             android:orientation="vertical"
@@ -17,7 +18,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/bikeView"
-                android:layout_centerHorizontal="true">
+                android:layout_centerHorizontal="true"
+                >
 
             <ImageView
                     android:layout_width="wrap_content"
@@ -40,7 +42,8 @@
                     android:singleLine="false"
                     android:textAlignment="center"
                     android:textSize="32dp"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible"
+                    android:gravity="center_vertical|center_horizontal"/>
         </LinearLayout>
 
         <view
