--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -50,20 +50,20 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
 
-            <view
+          <view
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     class="fr.ifsttar.plaiimob.BikeView"
                     android:id="@+id/bikeView"
                     android:layout_centerHorizontal="true"
-                    android:visibility="invisible"/>
-
+                    />
+            <!--
             <org.osmdroid.views.MapView
                     android:id="@+id/mapview"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     tilesource="Mapnik"
-                    />
+                    android:visibility="invisible"/>-->
         </FrameLayout>
 
     </LinearLayout>
