--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -4,8 +4,14 @@
         android:orderInCategory="100"
         android:showAsAction="never" />
 
-    <item android:id="@+id/action_neighborhood"
-          android:title="@string/action_neighborhood"
+    <item android:id="@+id/action_map"
+          android:title="@string/action_map"
           android:orderInCategory="100"
           android:showAsAction="never" />
+
+    <item android:id="@+id/action_compas"
+          android:title="@string/action_compass"
+          android:orderInCategory="100"
+          android:showAsAction="never" />
+
 </menu>
