--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -48,7 +48,8 @@
 
         <FrameLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:id="@+id/mainView">
 
           <view
                     android:layout_width="wrap_content"
@@ -59,12 +60,6 @@
                     android:visibility="invisible"
                     />
 
-            <org.osmdroid.views.MapView
-                    android:id="@+id/mapview"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    tilesource="Mapnik"
-                    />
         </FrameLayout>
 
     </LinearLayout>
